UPDATE: Ended Cart.html and his styling. Changed favourite btns in IndexForHim.html

--- a/html/IndexForHim.html
+++ b/html/IndexForHim.html
@@ -34,12 +34,15 @@
             </div>
             <div class="cards-wrapper d-flex flex-wrap justify-content-between">
                 <div class="card">
-                    <button type="button" class="favourite d-flex flex-row-reverse justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
-                    <a href="">
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod1">
+                        <label class="icon d-flex flex-row" for="prod1">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
+                    <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/forHim/prod1.png" alt="">
                         </div>
@@ -60,12 +63,15 @@
                     </a>
                 </div>
                 <div class="card">
-                    <button type="button" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
-                    <a href="">
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod2">
+                        <label class="icon d-flex flex-row" for="prod2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
+                    <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/forHim/prod2.png" alt="">
                         </div>
@@ -86,12 +92,15 @@
                     </a>
                 </div>
                 <div class="card">
-                    <button type="button" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
-                    <a href="">
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod3">
+                        <label class="icon d-flex flex-row" for="prod3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
+                    <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/forHim/prod3.png" alt="">
                         </div>
@@ -112,12 +121,15 @@
                     </a>
                 </div>
                 <div class="card">
-                    <button type="button" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
-                    <a href="">
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod4">
+                        <label class="icon d-flex flex-row" for="prod4">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
+                    <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/forHim/prod4.png" alt="">
                         </div>
@@ -174,12 +186,15 @@
             <h3>Прозрачные ткани</h3>
             <div class="cards-wrapper d-flex flex-wrap justify-content-between">
                 <div class="card">
-                    <button type="button" class="favourite d-flex flex-row-reverse justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
-                    <a href="">
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod5">
+                        <label class="icon d-flex flex-row" for="prod5">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
+                    <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/forHim/prod5.png" alt="">
                         </div>
@@ -200,12 +215,15 @@
                     </a>
                 </div>
                 <div class="card">
-                    <button type="button" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
-                    <a href="">
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod6">
+                        <label class="icon d-flex flex-row" for="prod6">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
+                    <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/forHim/prod6.png" alt="">
                         </div>
@@ -226,12 +244,15 @@
                     </a>
                 </div>
                 <div class="card">
-                    <button type="button" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
-                    <a href="">
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod7">
+                        <label class="icon d-flex flex-row" for="prod7">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
+                    <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/forHim/prod7.png" alt="">
                         </div>
@@ -252,12 +273,15 @@
                     </a>
                 </div>
                 <div class="card">
-                    <button type="button" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
-                    <a href="">
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod8">
+                        <label class="icon d-flex flex-row" for="prod8">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
+                    <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/forHim/prod8.png" alt="">
                         </div>
@@ -277,76 +301,33 @@
                         </div>
                     </a>
                 </div>
-            </div>
-            <div class="topic-cards-wrapper d-flex flex-row justify-content-between">
-                <div class="topic-card">
-                    <a href="">
-                        <img src="/html/source/img/forHim/topicImage1.png" alt="">
-                        <p>Новинки PRADA</p>
-                    </a>
-                </div>
-                <div class="topic-card">
-                    <a href="">
-                        <img src="/html/source/img/forHim/topicImage2.png" alt="">
-                        <p>Лучшее от JACQUEMUS</p>
-                    </a>
-                </div>
-                <div class="topic-card">
-                    <a href="">
-                        <img src="/html/source/img/forHim/topicImage3.png" alt="">
-                        <p>Свитера и трикотаж</p>
-                    </a>
-                </div>
-                <div class="topic-card">
-                    <a href="">
-                        <img src="/html/source/img/forHim/topicImage4.png" alt="">
-                        <p>Зимние пальто</p>
-                    </a>
-                </div>
-            </div>
-            <div class="question-topics-wrapper d-flex flex-row justify-content-around">
+            </div>    
+        </div>
+        <div class="topic-cards-wrapper d-flex flex-row justify-content-between">
+            <div class="topic-card">
                 <a href="">
-                    <div class="order-topic topic d-flex flex-column">
-                        <div class="icon">
-                            <svg width="24px" height="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M9.53589 6.90909C9.53589 5.85473 10.4868 5 11.6599 5C12.8329 5 13.7839 5.85473 13.7839 6.90909C13.7839 7.40532 13.6046 7.85733 13.2925 8.19682C12.6948 8.84706 11.8015 9.50197 11.8015 10.3455V10.6299M11.8015 10.6299C12.533 10.6214 13.2674 10.8246 13.8845 11.2406L21.317 16.2509C22.6234 17.1315 21.9305 19 20.2975 19H3.70254C2.08721 19 1.38322 17.1648 2.65531 16.27L9.751 11.2787C10.3534 10.855 11.076 10.6383 11.8015 10.6299Z" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"/>
-                            </svg>
-                        </div>
-                        <div class="text">
-                            <p class="topic-header">Как сделать заказ</p>
-                            <p class="topic-description">Подробная интсрукция для новых клиентов</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="">
-                    <div class="order-topic topic d-flex flex-column">
-                        <div class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
-                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                                <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286m1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94"/>
-                              </svg>
-                        </div>
-                        <div class="text">
-                            <p class="topic-header">Вопросы и ответы</p>
-                            <p class="topic-description">Все о доставке, возврате и пошлинах</p>
-                        </div>
-                    </div>
-                </a>
-                <a href="">
-                    <div class="order-topic topic d-flex flex-column">
-                        <div class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24   " fill="currentColor" class="bi bi-chat-left" viewBox="0 0 16 16">
-                                <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
-                              </svg>
-                        </div>
-                        <div class="text">
-                            <p class="topic-header">Нужна помощь?</p>
-                            <p class="topic-description">Обратитесь в нашу клиентскую службу</p>
-                        </div>
-                    </div>
+                    <img src="/html/source/img/forHim/topicImage1.png" alt="">
+                    <p>Новинки PRADA</p>
                 </a>
             </div>
-            
+            <div class="topic-card">
+                <a href="">
+                    <img src="/html/source/img/forHim/topicImage2.png" alt="">
+                    <p>Лучшее от JACQUEMUS</p>
+                </a>
+            </div>
+            <div class="topic-card">
+                <a href="">
+                    <img src="/html/source/img/forHim/topicImage3.png" alt="">
+                    <p>Свитера и трикотаж</p>
+                </a>
+            </div>
+            <div class="topic-card">
+                <a href="">
+                    <img src="/html/source/img/forHim/topicImage4.png" alt="">
+                    <p>Зимние пальто</p>
+                </a>
+            </div>
         </div>
         <div id="questions-section"></div>
         <div id="subscribe-section"></div>
