--- a/html/CartEmpty.html
+++ b/html/CartEmpty.html
@@ -366,6 +366,6 @@
         <div id="subscribe-section"></div>
     </main>
     <div id="footer"></div>
-    <script src="/html/js/Favourites.js"></script>
+    <script src="/html/js/Cart.js"></script>
 </body>
 </html>
