UPDATE: Added IndexForChildren.html with his styles

--- a/html/IndexForHim.html
+++ b/html/IndexForHim.html
@@ -19,9 +19,12 @@
 <body>
     <div id="header"></div>
     <div id="main" class="justify-content-around">
-        <div class="pointer">
-            Главная > New In
-        </div>
+        <nav class="pointer " aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="IndexForHim.html">Главная</a></li>
+              <li class="breadcrumb-item"><a href="">New-In</a></li>
+            </ol>
+        </nav>
         <div class="cards-list-wrapper">
             <h2>NEW IN</h2>
             <div class="sort-direction d-flex justify-content-end">
