UPDATE: Refactored file system

--- a/www/html/Favourites.html
+++ b/www/html/Favourites.html
@@ -8,13 +8,11 @@
         rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="/html/css/_utilities.css"> -->
-    <!-- <link rel="stylesheet" href="/html/css/Favourites.css"> -->
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
     </script>
-    <script src="/html/js/preload.js"></script>
+    <script src="/www/js/preload.js"></script>
 </head>
 <body>
     <div id="header"></div>
@@ -33,7 +31,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod1.png" alt="">
+                            <img src="/www/source/img/prod1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -75,7 +73,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod1.png" alt="">
+                            <img src="/www/source/img/prod1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -117,7 +115,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod1.png" alt="">
+                            <img src="/www/source/img/prod1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -159,7 +157,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod1.png" alt="">
+                            <img src="/www/source/img/prod1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -195,6 +193,6 @@
         <div id="subscribe-section"></div>
     </main>
     <div id="footer"></div>
-    <script src="/html/js/Favourites.js"></script>
+    <script src="/www/js/Favourites.js"></script>
 </body>
 </html>
