--- a/www/html/IndexForHim.html
+++ b/www/html/IndexForHim.html
@@ -8,13 +8,13 @@
         rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/html/css/Index.css">
-    <link rel="stylesheet" href="/html/css/_utilities.css">
+    <link rel="stylesheet" href="/www/css/Index.css">
+    <link rel="stylesheet" href="/www/css/_utilities.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
     </script>
-    <script src="/html/js/preload.js"></script>
+    <script src="/www/js/preload.js"></script>
 </head>
 <body>
     <div id="header"></div>
@@ -32,7 +32,7 @@
                     Сортировка
                 </div>
                 <div class="icon-wrapper">
-                    <object data="/html/source/icon/chevron-down-svgrepo-com.svg" type="image/svg+xml" width="24px" height="24px"></object>
+                    <object data="/www/source/icon/chevron-down-svgrepo-com.svg" type="image/svg+xml" width="24px" height="24px"></object>
                 </div>
             </div>
             <div class="cards-wrapper d-flex flex-wrap justify-content-between">
@@ -47,7 +47,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/forHim/prod1.png" alt="">
+                            <img src="/www/source/img/forHim/prod1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -76,7 +76,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/forHim/prod2.png" alt="">
+                            <img src="/www/source/img/forHim/prod2.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -105,7 +105,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/forHim/prod3.png" alt="">
+                            <img src="/www/source/img/forHim/prod3.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -134,7 +134,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/forHim/prod4.png" alt="">
+                            <img src="/www/source/img/forHim/prod4.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -175,12 +175,12 @@
                 </div>
             </div>
             <div class="img-wrapper">
-                <img src="/html/source/img/forHim/image1.png" alt="">
+                <img src="/www/source/img/forHim/image1.png" alt="">
             </div>
         </div>
         <div class="accessories-presentation-wrapper d-flex flex-row">
             <div class="accessories-presentation d-flex flex-column">
-                <img src="/html/source/img/forHim/image2.png" alt="">
+                <img src="/www/source/img/forHim/image2.png" alt="">
                 <h2>Яркие рубашки</h2>
                 <p>Праздничные модели от Casablanka</p>
             </div>
@@ -199,7 +199,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/forHim/prod5.png" alt="">
+                            <img src="/www/source/img/forHim/prod5.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -228,7 +228,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/forHim/prod6.png" alt="">
+                            <img src="/www/source/img/forHim/prod6.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -257,7 +257,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/forHim/prod7.png" alt="">
+                            <img src="/www/source/img/forHim/prod7.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -286,7 +286,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/forHim/prod8.png" alt="">
+                            <img src="/www/source/img/forHim/prod8.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -309,25 +309,25 @@
         <div class="topic-cards-wrapper d-flex flex-row justify-content-between">
             <div class="topic-card">
                 <a href="">
-                    <img src="/html/source/img/forHim/topicImage1.png" alt="">
+                    <img src="/www/source/img/forHim/topicImage1.png" alt="">
                     <p>Новинки PRADA</p>
                 </a>
             </div>
             <div class="topic-card">
                 <a href="">
-                    <img src="/html/source/img/forHim/topicImage2.png" alt="">
+                    <img src="/www/source/img/forHim/topicImage2.png" alt="">
                     <p>Лучшее от JACQUEMUS</p>
                 </a>
             </div>
             <div class="topic-card">
                 <a href="">
-                    <img src="/html/source/img/forHim/topicImage3.png" alt="">
+                    <img src="/www/source/img/forHim/topicImage3.png" alt="">
                     <p>Свитера и трикотаж</p>
                 </a>
             </div>
             <div class="topic-card">
                 <a href="">
-                    <img src="/html/source/img/forHim/topicImage4.png" alt="">
+                    <img src="/www/source/img/forHim/topicImage4.png" alt="">
                     <p>Зимние пальто</p>
                 </a>
             </div>
