--- a/www/html/_header.html
+++ b/www/html/_header.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/html/css/_header.css">
+    <link rel="stylesheet" href="/www/css/_header.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
@@ -126,7 +126,7 @@
                                         </ul>
                                     </div>
                                     <div class="into-account-btn-wrapper d-flex flex-row justify-content-end">
-                                        <a href="">
+                                        <a href="/www/html/Account.html">
                                             <button class="into-account-btn" type="button">В личный кабинет</button>
                                         </a>
                                     </div>
@@ -135,14 +135,14 @@
                         </div>
                     </div>
                     <div class="favourite-icon icon">
-                        <a href="Favourites.html">
+                        <a href="/www/html/Favourites.html">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
                                 <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
                             </svg>
                         </a>
                     </div>
                     <div class="purchases-icon icon">
-                        <a href="">
+                        <a href="/www/html/Cart.html">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
                                 <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
                             </svg>
@@ -188,7 +188,7 @@
                     </div>
                 </div>
                 <div class="relevant-wrapper">
-                    <img src="/html/source/img/navigationExternal/presentsExt.png" alt="">
+                    <img src="/www/source/img/navigationExternal/presentsExt.png" alt="">
                     <div class="text-wrapper">
                         <p>Актуально</p>
                         <h3>Лучшие подарки</h3>
@@ -232,7 +232,7 @@
                     </div>
                 </div>
                 <div class="relevant-wrapper">
-                    <img src="/html/source/img/navigationExternal/newExt.png" alt="">
+                    <img src="/www/source/img/navigationExternal/newExt.png" alt="">
                     <div class="text-wrapper">
                         <p>Актуально</p>
                         <h3>Новая классика</h3>
@@ -264,7 +264,7 @@
                     </div>
                 </div>
                 <div class="relevant-wrapper">
-                    <img src="/html/source/img/navigationExternal/brandsExt.png" alt="">
+                    <img src="/www/source/img/navigationExternal/brandsExt.png" alt="">
                     <div class="text-wrapper">
                         <p>Бренд недели</p>
                         <h3>Prada</h3>
@@ -312,7 +312,7 @@
                     </div>
                 </div>
                 <div class="relevant-wrapper">
-                    <img src="/html/source/img/navigationExternal/clothesExt.png" alt="">
+                    <img src="/www/source/img/navigationExternal/clothesExt.png" alt="">
                     <div class="text-wrapper">
                         <p>Актуально</p>
                         <h3>Трикотаж</h3>
@@ -353,7 +353,7 @@
                     </div>
                 </div>
                 <div class="relevant-wrapper">
-                    <img src="/html/source/img/navigationExternal/shoesExt.png" alt="">
+                    <img src="/www/source/img/navigationExternal/shoesExt.png" alt="">
                     <div class="text-wrapper">
                         <p>Актуально</p>
                         <h3>Осенняя обувь</h3>
@@ -387,7 +387,7 @@
                     </div>
                 </div>
                 <div class="relevant-wrapper">
-                    <img src="/html/source/img/navigationExternal/accessoriesExt.png" alt="">
+                    <img src="/www/source/img/navigationExternal/accessoriesExt.png" alt="">
                     <div class="text-wrapper">
                         <p>Актуально</p>
                         <h3>Головные уборы</h3>
@@ -425,7 +425,7 @@
                     </div>
                 </div>
                 <div class="relevant-wrapper">
-                    <img src="/html/source/img/navigationExternal/newExt.png" alt="">
+                    <img src="/www/source/img/navigationExternal/newExt.png" alt="">
                     <div class="text-wrapper">
                         <p>Актуально</p>
                         <h3>Ювелирные изделия</h3>
@@ -462,7 +462,7 @@
                     </div>
                 </div>
                 <div class="relevant-wrapper">
-                    <img src="/html/source/img/navigationExternal/householdGoodsExt.png" alt="">
+                    <img src="/www/source/img/navigationExternal/householdGoodsExt.png" alt="">
                     <div class="text-wrapper">
                         <p>Актуально</p>
                         <h3>Товары для дома</h3>
@@ -491,7 +491,7 @@
                     </div>
                 </div>
                 <div class="relevant-wrapper">
-                    <img src="/html/source/img/navigationExternal/preOwnedExt.png" alt="">
+                    <img src="/www/source/img/navigationExternal/preOwnedExt.png" alt="">
                     <div class="text-wrapper">
                         <p>Актуально</p>
                         <h3>Hermes Pre-owned</h3>
@@ -519,7 +519,7 @@
                     </div>
                 </div>
                 <div class="relevant-wrapper">
-                    <img src="/html/source/img/navigationExternal/saleExt.png" alt="">
+                    <img src="/www/source/img/navigationExternal/saleExt.png" alt="">
                     <div class="text-wrapper">
                         <p>Для нее</p>
                         <h3>Распродажа</h3>
@@ -578,11 +578,11 @@
                     <div class="oauth-btns d-flex flex-column">
                         <div class="google-btn oauth-btn d-flex flex-row">
                             <button type="button">Войти через Google</button>
-                            <img src="/html/source/logos/google-logo.svg" alt="">
+                            <img src="/www/source/logos/google-logo.svg" alt="">
                         </div>
                         <div class="vk-btn oauth-btn d-flex flex-row">
                             <button type="button">Войти через ВКонтакте</button>
-                            <img src="/html/source/logos/vk-logo.svg" alt="">
+                            <img src="/www/source/logos/vk-logo.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -590,5 +590,5 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="/html/js/_header.js"></script>
+    <script src="/www/js/_header.js"></script>
 </body>
