--- a/www/html/Index.html
+++ b/www/html/Index.html
@@ -8,13 +8,13 @@
         rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/html/css/_utilities.css">
-    <link rel="stylesheet" href="/html/css/Index.css">
+    <link rel="stylesheet" href="/www/css/_utilities.css">
+    <link rel="stylesheet" href="/www/css/Index.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
     </script>
-    <script src="/html/js/preload.js"></script>
+    <script src="/www/js/preload.js"></script>
 </head>
 <body>
     <div id="header"></div>
@@ -53,7 +53,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod1.png" alt="">
+                            <img src="/www/source/img/prod1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -82,7 +82,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod2.png" alt="">
+                            <img src="/www/source/img/prod2.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -111,7 +111,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod3.png" alt="">
+                            <img src="/www/source/img/prod3.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -140,7 +140,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod4.png" alt="">
+                            <img src="/www/source/img/prod4.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -181,12 +181,12 @@
                 </div>
             </div>
             <div class="img-wrapper">
-                <img src="/html/source/img/image5.png" alt="">
+                <img src="/www/source/img/image5.png" alt="">
             </div>
         </div>
         <div class="accessories-presentation-wrapper d-flex flex-row">
             <div class="accessories-presentation d-flex flex-column">
-                <img src="/html/source/img/image6.png" alt="">
+                <img src="/www/source/img/image6.png" alt="">
                 <h2>Аксессуары для вечеринки</h2>
                 <p>Оцените праздничные туфли и сумки от Prada и других брендов.</p>
             </div>
@@ -205,7 +205,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod5.png" alt="">
+                            <img src="/www/source/img/prod5.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -234,7 +234,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod6.png" alt="">
+                            <img src="/www/source/img/prod6.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -263,7 +263,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod7.png" alt="">
+                            <img src="/www/source/img/prod7.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -292,7 +292,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod8.png" alt="">
+                            <img src="/www/source/img/prod8.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -315,25 +315,25 @@
         <div class="topic-cards-wrapper d-flex flex-row justify-content-between">
             <div class="topic-card">
                 <a href="">
-                    <img src="/html/source/img/topicImage1.png" alt="">
+                    <img src="/www/source/img/topicImage1.png" alt="">
                     <p>Лучшие пальто</p>
                 </a>
             </div>
             <div class="topic-card">
                 <a href="">
-                    <img src="/html/source/img/topicImage2.png" alt="">
+                    <img src="/www/source/img/topicImage2.png" alt="">
                     <p>Новые сумки</p>
                 </a>
             </div>
             <div class="topic-card">
                 <a href="">
-                    <img src="/html/source/img/topicImage3.png" alt="">
+                    <img src="/www/source/img/topicImage3.png" alt="">
                     <p>Главное от prada</p>
                 </a>
             </div>
             <div class="topic-card">
                 <a href="">
-                    <img src="/html/source/img/topicImage4.png" alt="">
+                    <img src="/www/source/img/topicImage4.png" alt="">
                     <p>Стильные сапоги</p>
                 </a>
             </div>
@@ -342,7 +342,6 @@
         <div id="subscribe-section"></div>
     </main>
     <div id="footer"></div>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
-    <script src="/html/js/Index.js"></script>
+    <script src="/www/js/Index.js"></script>
 </body>
 </html>
