--- a/www/html/IndexForChildren.html
+++ b/www/html/IndexForChildren.html
@@ -8,13 +8,13 @@
         rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/html/css/_utilities.css">
-    <link rel="stylesheet" href="/html/css/IndexForChildren.css">
+    <link rel="stylesheet" href="/www/css/_utilities.css">
+    <link rel="stylesheet" href="/www/css/IndexForChildren.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
     </script>
-    <script src="/html/js/preload.js"></script>
+    <script src="/www/js/preload.js"></script>
 </head>
 <body>
     <div id="header"></div>
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="img-wrapper">
-                <img src="/html/source/img/forChildren/image1.png" alt="">
+                <img src="/www/source/img/forChildren/image1.png" alt="">
             </div>
         </div>
         <div class="cards-list-wrapper">
@@ -55,7 +55,7 @@
                 <div class="card">
                     <a href="">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/forChildren/prodImg1.png" alt="">
+                            <img src="/www/source/img/forChildren/prodImg1.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="description">
@@ -67,7 +67,7 @@
                 <div class="card">
                     <a href="">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/forChildren/prodImg2.png" alt="">
+                            <img src="/www/source/img/forChildren/prodImg2.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="description">
@@ -79,7 +79,7 @@
                 <div class="card">
                     <a href="">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/forChildren/prodImg3.png" alt="">
+                            <img src="/www/source/img/forChildren/prodImg3.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="description">
@@ -92,7 +92,7 @@
         </div>
         <div class="presentation-wrapper d-flex flex-row justify-content-around">
             <div class="img-wrapper">
-                <img src="/html/source/img/forChildren/image2.png" alt="">
+                <img src="/www/source/img/forChildren/image2.png" alt="">
             </div>
             <div class="presentation d-flex justify-content-center flex-wrap">
                 <div class="wrapper d-flex flex-column justify-content-center">
@@ -118,6 +118,6 @@
         <div id="subscribe-section"></div>
     </main>
     <div id="footer"></div>
-    <script src="/html/js/Index.js"></script>
+    <script src="/www/js/Index.js"></script>
 </body>
 </html>
