--- a/www/html/ProdList.html
+++ b/www/html/ProdList.html
@@ -8,12 +8,12 @@
         rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/html/css/_utilities.css">
+    <link rel="stylesheet" href="/www/css/_utilities.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
     </script>
-    <script src="/html/js/preload.js"></script>
+    <script src="/www/js/preload.js"></script>
 </head>
 <body>
     <div id="header"></div>
@@ -66,7 +66,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -95,7 +95,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -124,7 +124,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -153,7 +153,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -182,7 +182,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -211,7 +211,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -240,7 +240,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -269,7 +269,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -298,7 +298,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -327,7 +327,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -356,7 +356,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -385,7 +385,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -414,7 +414,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -443,7 +443,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -472,7 +472,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -501,7 +501,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
+                            <img src="/www/source/img/prodList/prodPlaceholder.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -558,7 +558,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod5.png" alt="">
+                            <img src="/www/source/img/prod5.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -587,7 +587,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod6.png" alt="">
+                            <img src="/www/source/img/prod6.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -616,7 +616,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod7.png" alt="">
+                            <img src="/www/source/img/prod7.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -645,7 +645,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod8.png" alt="">
+                            <img src="/www/source/img/prod8.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -679,7 +679,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod5.png" alt="">
+                            <img src="/www/source/img/prod5.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -708,7 +708,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod6.png" alt="">
+                            <img src="/www/source/img/prod6.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -737,7 +737,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod7.png" alt="">
+                            <img src="/www/source/img/prod7.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -766,7 +766,7 @@
                     </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prod8.png" alt="">
+                            <img src="/www/source/img/prod8.png" alt="">
                         </div>
                         <div class="card-text">
                             <div class="season">
@@ -858,6 +858,6 @@
     </main>
     <div id="footer"></div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
-    <script src="/html/js/ProdList.js"></script>
+    <script src="/www/js/ProdList.js"></script>
 </body>
 </html>
