--- a/www/html/_footer.html
+++ b/www/html/_footer.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/html/css/_footer.css">
+    <link rel="stylesheet" href="/www/css/_footer.css">
 </head>
 <footer>
     <div class="navbar-wrapper d-flex flex-row justify-content-between">
@@ -50,27 +50,27 @@
                 <div class="icons-wrapper d-flex flex-row">
                     <div class="instagram-link icon">
                         <a href="">
-                            <img src="/html/source/logos/instagram-logo.svg " alt="">
+                            <img src="/www/source/logos/instagram-logo.svg " alt="">
                         </a>
                     </div>
                     <div class="vk-link icon">
                         <a href="">
-                            <img src="/html/source/logos/vk-logo.svg" type="icon" alt="">
+                            <img src="/www/source/logos/vk-logo.svg" type="icon" alt="">
                         </a>
                     </div>
                     <div class="ok-link icon">
                         <a href="">
-                            <img src="/html/source/logos/ok-logo.svg" type="icon" alt="">
+                            <img src="/www/source/logos/ok-logo.svg" type="icon" alt="">
                         </a>
                     </div>
                     <div class="telegram-link icon">
                         <a href="">
-                            <img src="/html/source/logos/telegram-logo.svg" type="icon" alt="">
+                            <img src="/www/source/logos/telegram-logo.svg" type="icon" alt="">
                         </a>
                     </div>
                     <div class="youtube-link icon">
                         <a href="">
-                            <img src="/html/source/logos/youtube-logo.svg" type="icon" alt="">
+                            <img src="/www/source/logos/youtube-logo.svg" type="icon" alt="">
                         </a>
                     </div>
                 </div>
